fixed body align

--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+body {
+    margin: 0 auto;
+}
